# GSI-Monitor

./: CMakeLists.txt  INSTALL.md  README.md
.github/workflows/: gcc.yml  intel.yml
ci/: spack.yaml
cmake/: gsimon_compiler_flags.cmake
modulefiles/: cheyenne.gnu.lua  cheyenne.intel.lua  common-run.lua  common.lua  hera.gnu-run.lua  hera.gnu.lua  hera.intel-run.lua  hera.intel.lua  hercules-run.lua  hercules.intel-run.lua  hercules.intel.lua  hercules.lua  jet-run.lua  jet.intel-run.lua  jet.intel.lua  jet.lua  orion-run.lua  orion.intel-run.lua  orion.lua  s4-run.lua  s4.intel-run.lua  s4.lua  wcoss2-run.lua  wcoss2.lua  wcoss_dell_p3.lua
parm/: Mon_config
src/: CMakeLists.txt
src/Conventional_Monitor/: CMakeLists.txt  ConMon_install.pl
src/Conventional_Monitor/data_extract/ush/: ConMon_DE.sh  ConMon_DE_rgn.sh
src/Conventional_Monitor/image_gen/gscripts/: colorbar.gs  defint.gs  page.gs  plot_hist.gs  plot_qsfc_horz.gs  plot_uvallev_horz.gs  plot_uvsatwind_horz.gs  plotstas_time_bias.gs  plotstas_time_bias2.gs  plotstas_time_bias2_ps.gs  plotstas_time_bias_ps.gs  plotstas_time_count.gs  plotstas_time_count_ps.gs  plotstas_vert_bias.gs  plotstas_vert_count.gs
src/Conventional_Monitor/image_gen/ush/: ConMon_IG.sh  Transfer.sh  make_tdef.sh  mk_horz_hist.sh  mk_time_vert.sh  plot_hist.sh  plot_horz.sh  plot_horz_uv.sh  plot_time.sh  plot_time_ps.sh  plot_vert.sh  read_scatter.sh  rm_img_files.pl  transfer_imgs.sh
src/Conventional_Monitor/parm/: ConMon_config
src/Minimization_Monitor/: README
src/Minimization_Monitor/data_xtrct/ush/: MinMon_CP.sh
src/Minimization_Monitor/image_gen/ush/: MinMon_Plt.sh
src/Minimization_Monitor/parm/: MinMon_config  MinMon_user_settings
src/Ozone_Monitor/: CMakeLists.txt  OznMon_install.pl  README
src/Ozone_Monitor/data_xtrct/ush/: OznMon_CP.sh  OznMon_MkBase.sh  oznmon_copy.sh
src/Ozone_Monitor/image_gen/ush/: OznMon_Plt.sh  (+9 more)
src/Ozone_Monitor/parm/: OznMon_config  OznMon_user_settings
src/Radiance_Monitor/: CMakeLists.txt  README  RadMon_install.pl
src/Radiance_Monitor/parm/: RadMon_config
ush/: build.sh  detect_machine.sh  find_last_cycle.sh  get_stats_path.sh  module-setup.sh  rgn_find_cycle.pl
(+83 files in other folders)
